--- a/client/assets/css/global.scss
+++ b/client/assets/css/global.scss
@@ -27,7 +27,7 @@ body {
     flex-direction: column;
 }
 
-.active-game {
+.recent-game {
     margin: 5px 0;
     padding: 10px;
     border-radius: 5px;
