--- a/client/assets/css/global.scss
+++ b/client/assets/css/global.scss
@@ -1,24 +1,57 @@
 @charset 'utf-8';
 
 @import '../../../node_modules/normalize.css/normalize.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,600');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,500,700');
+
+@font-face {
+    font-family: Fortnite;
+    src: url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.eot');
+    src: url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.eot?#iefix') format('embedded-opentype'),
+        url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.woff2') format('woff2'),
+        url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.woff') format('woff'),
+        url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.ttf') format('truetype'),
+        url('//db.onlinewebfonts.com/t/800e985f75a5a56c2f7b4be502d286de.svg#Burbank Big Condensed') format('svg');
+}
+
+$primary: #2b2e3d;
+$secondary: #343f56;
+$white: #fafafa;
+$offWhite: #91a6b5;
+$blue: #6d80fe;
+$lightBlue: #2acafd;
+$pink: #ff6c88;
+$peach: #ff998b;
+$turqoise: #0bb4e3;
+$lightGreen: #27eea0;
+$purple: #6f7cff;
+$magenta: #fa83ed;
+$yellow: #ffd835;
+$orange: #fda549;
 
 html,
 body {
     min-height: 100vh;
     color: #fafafa;
-}
 
-a {
-    color: #fafafa;
-    text-decoration: none;
+    font-family: 'Roboto', Helvetica, Roboto, Arial, sans-serif;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 1.3;
+
+    @media only screen and (max-width: 768px) {
+        font-size: 13px;
+    }
 }
 
 body {
     display: flex;
     flex-direction: column;
-    background-color: #343f56;
+    background-color: $secondary;
     overflow-x: hidden;
+}
+
+p {
+    margin: 0;
 }
 
 #root {
@@ -27,10 +60,118 @@ body {
     flex-direction: column;
 }
 
+h3 {
+    font-size: 1.25rem;
+    margin: 0;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+}
+
+h4 {
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 0.5rem;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+hr {
+    border: none;
+    height: 1px;
+    background-color: #353a49;
+    margin: 0;
+}
+
+main {
+    padding: 1rem;
+}
+
+a {
+    text-decoration: none;
+    color: $white;
+
+    &.nav-link {
+        color: $offWhite;
+
+        &.active {
+            color: $lightGreen;
+        }
+
+        &:hover:not(.active) {
+            color: $white;
+        }
+    }
+}
+
+.banner {
+    background-color: $primary;
+}
+
+.card {
+    padding: 1rem;
+    background-color: $primary;
+    border-radius: 0.25rem;
+}
+
 .recent-game {
-    margin: 5px 0;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #2b2e3d;
-    border-left: 1px solid #27eea0;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    border-radius: 0.25rem;
+    background-color: darken($primary, 2%);
+
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+
+    label {
+        color: $offWhite;
+        font-size: 0.75rem;
+    }
+
+    h5 {
+        font-family: Fortnite;
+        letter-spacing: 0.5px;
+        font-size: 1.125rem;
+        margin: 0;
+    }
+
+    h4 {
+        text-transform: capitalize;
+        margin-bottom: 0;
+        background: linear-gradient(to top right, $turqoise, $lightGreen);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        &.solo {
+            background: linear-gradient(to top right, $blue, $lightBlue);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        &.duo {
+            background: linear-gradient(to top right, $purple, $magenta);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        &.trios {
+            background: linear-gradient(to top right, $orange, $yellow);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        &.squad {
+            background: linear-gradient(to top right, $pink, $peach);
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+    }
+}
+
+.text-off-white {
+    color: $offWhite;
 }
