--- a/client/assets/css/global.scss
+++ b/client/assets/css/global.scss
@@ -62,8 +62,7 @@ p {
 
 h3 {
     font-size: 1.25rem;
-    margin: 0;
-    margin-bottom: 0.5rem;
+    margin: 0 0 0.5rem 0;
     font-weight: 600;
 }
 
@@ -115,6 +114,7 @@ a {
     padding: 1rem;
     background-color: $primary;
     border-radius: 0.25rem;
+    margin-bottom: 2rem;
 }
 
 .recent-game {
