--- a/client/assets/css/global.scss
+++ b/client/assets/css/global.scss
@@ -117,6 +117,11 @@ a {
     margin-bottom: 2rem;
 }
 
+h1.username {
+    margin: 0;
+    font-family: Fortnite;
+}
+
 .recent-game {
     margin-bottom: 1rem;
     padding: 1rem;
